--- a/News.Api/Properties/launchSettings.json
+++ b/News.Api/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "News.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7226;http://localhost:5045",
       "environmentVariables": {
