added reference to local secrets

--- a/News.Api/News.Api.csproj
+++ b/News.Api/News.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>be6673aa-2397-41ad-adcf-0aecaef6491c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
