feat: adds AuthSecret to the AppConfiguration in the pipeline

--- a/News.Api/appsettings.json
+++ b/News.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Jwt": {
+    "Issuer": "https://your-news.com/",
+    "Audience": "https://your-news.com/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
