feat: adds connectionString support and connects the DbContext to the application in the pipeline

--- a/News.Api/appsettings.json
+++ b/News.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=YourNewsDB;Username=admin;Password=1234"
+  },
   "Jwt": {
     "Issuer": "https://your-news.com/",
     "Audience": "https://your-news.com/"
