--- a/News.Api/appsettings.json
+++ b/News.Api/appsettings.json
@@ -3,8 +3,8 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=YourNewsDB;Username=admin;Password=1234"
   },
   "Jwt": {
-    "Issuer": "https://your-news.com/",
-    "Audience": "https://your-news.com/"
+    "Issuer": "https://your-news.com",
+    "Audience": "https://your-news.com"
   },
   "Logging": {
     "LogLevel": {
